--- a/WPFDocument/MainWindow.xaml
+++ b/WPFDocument/MainWindow.xaml
@@ -1,8 +1,15 @@
 ﻿<Window
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" mc:Ignorable="d" x:Class="WPFDocument.MainWindow"
-        Title="多功能插件管理" Height="610" Width="860" AllowsTransparency="True" WindowStyle="None" Background="{x:Null}" MouseLeftButtonDown="Window_MouseLeftButtonDown">
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" mc:Ignorable="d" x:Class="WPFDocument.MainWindow"
+        xmlns:winforms="clr-namespace:System.Windows.Forms;assembly=System.Windows.Forms"
+        Title="多功能插件管理" Height="610" Width="860"
+        AllowsTransparency="True" 
+        WindowStyle="None" Background="{x:Null}"
+        MouseLeftButtonDown="Window_MouseLeftButtonDown"
+        Loaded="Window_Loaded"
+         >
     <Window.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -29,7 +36,7 @@
                 <RowDefinition/>
                 <RowDefinition Height="24.5"/>
             </Grid.RowDefinitions>
-            <TabControl x:Name="tab" Grid.RowSpan="2" Margin="0" Style="{DynamicResource TabControlStyle}" Grid.Row="1" Background="{x:Null}">
+            <TabControl x:Name="tab" SelectionChanged="Tab_SelectionChanged"  Grid.RowSpan="2"   Margin="0" Style="{DynamicResource TabControlStyle}"   Grid.Row="1"  Background="{x:Null}">
                 <TabItem Header="电脑体验" Height="83" Margin="5,0,0,0" Width="74" Style="{DynamicResource TabItemStyle}">
                     <TabItem.Background>
                         <ImageBrush ImageSource="skin/ico/ico_Examine.png"/>
@@ -155,7 +162,13 @@
                         </UniformGrid>
                     </Grid>
                 </TabItem>
-              
+                <TabItem Header="ces" Height="83" Margin="79,0,0,0" Width="74" Style="{DynamicResource TabItemStyle}">
+                    <WindowsFormsHost>
+                        <winforms:Label Text="sssss" Dock="Fill">
+                          
+                        </winforms:Label>
+                    </WindowsFormsHost>
+                </TabItem>
             </TabControl>
             <Label x:Name="labTitle" Content="多功能插件管理 V1.0.0.0" HorizontalAlignment="Left" Width="172" Foreground="#A794E9FF" FontWeight="Bold" VerticalAlignment="Top"/>
             <Label x:Name="labLeftFoot" Content="主程序版本：V1.0.0.0" d:LayoutOverrides="Height" Margin="0" Grid.Row="3" Foreground="#A794E9FF" FontWeight="Bold" BorderThickness="0" BorderBrush="White" HorizontalAlignment="Left" Width="147.5"/>
